# libass

./: Makefile.am  README.md  configure.ac  libass-octopus.pc.in  libass_octopus.pc.in
libass/: Makefile.am  ass_bitmap.c  ass_fontselect.c  ass_render.c  ass_shaper.c  ass_utils.h
